--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -1,4 +1,6 @@
-﻿html, body {
+﻿/* @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"); */
+
+html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
@@ -68,7 +70,17 @@ h1:focus {
 .status-bar-safe-area {
     display: none;
 }
-
+/* .nav-link {
+    display: flex;
+    justify-content:baseline;
+    text-decoration: none;
+}
+.nav-link > p {
+    font-size: 1rem;
+}
+.nav-link > span {
+    font-size: 1rem;
+} */
 @supports (-webkit-touch-callout: none) {
     .status-bar-safe-area {
         display: flex;
