Added Modifying Master Key

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -9,7 +9,7 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
 	<nav class="flex-column">
 		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+			<NavLink class="nav-link" href="master" Match="NavLinkMatch.All">
 				<span class="bi bi-key-fill x3" aria-hidden="true"></span>
 				<p>Changer la Master Key</p>
 			</NavLink>
