--- a/Components/Pages/AddPasswordsPage.razor
+++ b/Components/Pages/AddPasswordsPage.razor
@@ -26,7 +26,7 @@
     private Password newPassword = new();
 
     protected override async Task OnInitializedAsync() {
-        string? masterKey = await SecureStorageService.GetEncryptedMasterKeyAsync();
+        string? masterKey = PasswordDatabase.MasterKey;
 
         if (string.IsNullOrEmpty(masterKey)) {
             Navigation.NavigateTo("/login");
