--- a/Components/Pages/PasswordListPage.razor
+++ b/Components/Pages/PasswordListPage.razor
@@ -29,9 +29,11 @@
 	private List<Password> passwords;
 
 	protected override async Task OnInitializedAsync() {
-		if (string.IsNullOrEmpty(PasswordDatabase.MasterKey)) {
-			Navigation.NavigateTo("/login");
-		}
+        string? masterKey = PasswordDatabase.MasterKey;
+
+        if (string.IsNullOrEmpty(masterKey)) {
+            Navigation.NavigateTo("/login");
+        }
 
 		passwords = await PasswordDatabase.GetPasswordsAsync();
 	}
