--- a/Components/Pages/LoginPage.razor
+++ b/Components/Pages/LoginPage.razor
@@ -1,9 +1,8 @@
 @page "/login"
 @inject NavigationManager Navigation
 
-<h3>Connexion</h3>
-
 @if (masterKey is not null) {
+	<h3>Connexion</h3>
 	<EditForm Model="@loginModel" OnValidSubmit="HandleLogin">
 		<DataAnnotationsValidator />
 		<ValidationSummary />
@@ -15,6 +14,7 @@
 	</EditForm>
 }
 else {
+	<h3>Création de Clé</h3>
 	<EditForm Model="@loginModel" OnValidSubmit="HandleSignup">
 		<DataAnnotationsValidator />
 		<ValidationSummary />
@@ -36,12 +36,12 @@ else {
 
     private async Task HandleLogin() {
 		if (await PasswordDatabase.TryLoginAsync(loginModel.MasterKey)) {
-			Navigation.NavigateTo("/list");
+			Navigation.NavigateTo("/");
 		}
     }
 
     private void HandleSignup() {
         PasswordDatabase.SetMasterKeyDestructive(loginModel.MasterKey);
-        Navigation.NavigateTo("/list");
+        Navigation.NavigateTo("/");
     }
 }
