Added Option to reset Master key, separated login and register, fixed error on decrypt with wrong key

--- a/Components/Pages/PasswordListPage.razor
+++ b/Components/Pages/PasswordListPage.razor
@@ -11,9 +11,9 @@
 				<button @onclick="() => password.IsVisible = ! password.IsVisible">
 					Afficher en Clair
 				</button>
-				<button @onclick="() => EditPassword(password)">
+				@* <button @onclick="() => EditPassword(password)">
 					Modifier
-				</button>
+				</button> *@
 				<button @onclick="() => DeletePassword(password)">
 					Supprimer
 				</button>
@@ -29,18 +29,18 @@
 	private List<Password> passwords;
 
 	protected override async Task OnInitializedAsync() {
-        string? masterKey = PasswordDatabase.MasterKey;
+		string? masterKey = PasswordDatabase.MasterKey;
 
-        if (string.IsNullOrEmpty(masterKey)) {
-            Navigation.NavigateTo("/login");
-        }
+		if (string.IsNullOrEmpty(masterKey)) {
+			Navigation.NavigateTo("/login");
+		}
 
 		passwords = await PasswordDatabase.GetPasswordsAsync();
 	}
 
-	private async Task EditPassword(Password password) {
+	@* private async Task EditPassword(Password password) {
 		Navigation.NavigateTo("/edit");
-	}
+	} *@
 
 	private async Task DeletePassword(Password password) {
 		await PasswordDatabase.DeletePasswordAsync(password);
