--- a/Components/Pages/ResetPage.razor
+++ b/Components/Pages/ResetPage.razor
@@ -1,7 +1,7 @@
-@page "/start"
+@page "/reset"
 @inject NavigationManager Navigation
 
-<h3>Création de Clé</h3>
+<h3>Réinitialisation de la Master Key</h3>
 
 @if (masterKey is not null) {
 	<h2>
@@ -9,26 +9,26 @@
 	</h2>
 }
 
-<EditForm Model="@loginModel" OnValidSubmit="HandleSignup">
+<EditForm Model="@resetModel" OnValidSubmit="HandleResetMasterKey">
 	<DataAnnotationsValidator />
 	<ValidationSummary />
 	<div>
 		<label for="masterKey">Master Key:</label>
-		<InputText id="masterKey" @bind-Value="loginModel.MasterKey" type="password" />
+		<InputText id="masterKey" @bind-Value="resetModel.MasterKey" type="password" />
 	</div>
 	<button type="submit">Créer Master Key</button>
 </EditForm>
 
 @code {
-	private LoginModel loginModel = new();
+	private ResetKeyModel resetModel = new();
 	private string? masterKey;
 
 	protected override async Task OnInitializedAsync() {
 		masterKey = await SecureStorageService.GetEncryptedMasterKeyAsync();
 	}
 
-	private async void HandleSignup() {
-		await PasswordDatabase.SetMasterKeyDestructive(loginModel.MasterKey);
+	private async void HandleResetMasterKey() {
+		await PasswordDatabase.SetMasterKeyDestructive(resetModel.MasterKey);
 		Navigation.NavigateTo("/");
 	}
 }
