Better Reset Password Text

--- a/Components/Pages/PasswordListPage.razor
+++ b/Components/Pages/PasswordListPage.razor
@@ -7,7 +7,7 @@
 	<ul>
 		@foreach (Password password in passwords) {
 			<li>
-				Site: <strong>@password.Website</strong> | Nom d'Utilisateur: <strong>@password.Username</strong> -
+				Site: <strong>@password.Website</strong> | Nom d'Utilisateur: <strong>@password.Username</strong>
 				<button @onclick="() => ShowPassword(password)">
 					Afficher en Clair
 				</button>
