--- a/Components/Pages/AddPasswordsPage.razor
+++ b/Components/Pages/AddPasswordsPage.razor
@@ -8,15 +8,15 @@
 	<DataAnnotationsValidator />
 	<ValidationSummary />
 	<div>
-		<label for="website">Website:</label>
+		<label for="website">Site Web:</label>
 		<InputText id="website" @bind-Value="newPassword.Website" />
 	</div>
 	<div>
-		<label for="username">Username:</label>
+		<label for="username">Nom d'Utilisateur:</label>
 		<InputText id="username" @bind-Value="newPassword.Username" />
 	</div>
 	<div>
-		<label for="password">Password:</label>
+		<label for="password">Mot de Passe:</label>
 		<InputText id="password" @bind-Value="newPassword.DecryptedPassword" type="password" />
 	</div>
 	<button type="submit">Ajouter</button>
