--- a/Components/Pages/LoginPage.razor
+++ b/Components/Pages/LoginPage.razor
@@ -14,7 +14,7 @@
 
 </EditForm>
 <a href="/reset">
-	<button>Réinitialiser les Mots de Passes</button>
+	<button>Réinitialiser la Master Key</button>
 </a>
 
 @code {
