navigate to list when updating master key

--- a/Components/Pages/EditMasterKey.razor
+++ b/Components/Pages/EditMasterKey.razor
@@ -25,6 +25,6 @@
 
 	private async Task HandleModifyKey() {
 		await PasswordDatabase.UpdateMasterKey(editKeyModel.MasterKey);
-		Navigation.NavigateTo("/");
+		Navigation.NavigateTo("/list");
 	}
 }
